# PC_Optimizer

./: .coveragerc  .gitignore  CONTRIBUTING.md  EXE-00.toc  FEEDBACK.md  LICENSE  New_Implementation.md  PC_Optimizer.code-workspace  PC_Optimizer_GUI_v2.spec  README.md  SentinelPC.spec  TODO.md  TODO_ISSUES.md  WORKAROUND.md  build.bat  data_analyzer.spec  main.py  netlify.toml  pc_optimizer_cli_v2.spec  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  run.bat  run_tasks.bat  setup.py
.github/workflows/: build.yml  ci.yml  coverage.yml
_wwwroot/: contact.html  index.html  privacy.html  terms.html
config/: config.ini
docs/: ARCHITECTURE.md  AnalysisPlayground.md  Cheatsheet.md  DevScripts.md  README.md  cli_user_guide.md  conf.py  gui_user_guide.md  index.rst
locales/: en.json
scripts/: build.bat  build_unified.py  bump_version.py
spec/: PCOptimizerGUI.spec  PC_Optimizer_CLI_v2.spec  PC_Optimizer_GUI_v2.spec  sysopt.spec
src/: main.py
src/cli/: build_cli.py  pc_optimizer_cli.py  pc_optimizer_cli_v2.py  sentinel_cli.py
src/core/: __init__.py  accessibility_manager.py  base_manager.py  cli_manager.py  config_manager.py  config_manager_v2.py  data_analyzer.py  environment_manager.py  feature_flags.py  i18n_manager.py  logging_manager.py  monitoring_manager.py  performance_optimizer.py  performance_optimizer_v2.py  sentinel_core.py  sentinel_pc.py  service_layer.py
src/gui/: exceptions.py  gui_worker.py  pc_optimizer_gui.py  pc_optimizer_gui_v2.py  scrollable_frame.py  sentinel_gui.py  theme.py
tests/: test_cli_components.py  test_config_manager.py  test_config_manager_v2.py  test_gui_components.py  test_integration.py  test_performance_optimizer.py  test_performance_optimizer_v2.py
wwwroot/: index.html
